funcs/func_periodic_hook.c
@@ -519,4 +519,5 @@ AST_MODULE_INFO(ASTERISK_GPL_KEY, AST_MODFLAG_GLOBAL_SYMBOLS, "Periodic dialplan
 	.support_level = AST_MODULE_SUPPORT_CORE,
 	.load = load_module,
 	.unload = unload_module,
+	.requires = "app_chanspy,func_cut,func_groupcount,func_uri",
 );
