res/res_pjsip_stir_shaken.c
@@ -325,5 +325,5 @@ AST_MODULE_INFO(ASTERISK_GPL_KEY, AST_MODFLAG_GLOBAL_SYMBOLS | AST_MODFLAG_LOAD_
 	.load = load_module,
 	.unload = unload_module,
 	.load_pri = AST_MODPRI_DEFAULT,
-	.requires = "res_pjsip,res_stir_shaken",
+	.requires = "res_pjsip,res_pjsip_session,res_stir_shaken",
 );
